[gd_scene load_steps=5 format=3 uid="uid://by85xsaayserk"]

[ext_resource type="Script" uid="uid://i8laqpihad3j" path="res://main.gd" id="1_ig7tw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xm2m"]
bg_color = Color(0.258758, 0.20428, 0.0880368, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ig7tw"]
bg_color = Color(0.862745, 0.811765, 0.560784, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_ig7tw"]
/colors/progress_bar_color = Color(0.862745, 0.811765, 0.560784, 1)
ProgressBar/colors/font_color = Color(0.27451, 0.537255, 0.4, 1)
ProgressBar/styles/background = SubResource("StyleBoxFlat_0xm2m")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_ig7tw")

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ig7tw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="IntroductionSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleAnalysis" type="RichTextLabel" parent="MarginContainer/VBoxContainer/IntroductionSection"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 0.623529, 0.156863, 1)
bbcode_enabled = true
text = "Static Typing Performance Analysis"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelGodotVersion" type="RichTextLabel" parent="MarginContainer/VBoxContainer/IntroductionSection"]
layout_mode = 2
theme_override_colors/default_color = Color(0.345098, 0.431373, 0.458824, 1)
bbcode_enabled = true
text = "Godot Engine [color=#458966]4.4.rc1[/color]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.862745, 0.811765, 0.560784, 1)
bbcode_enabled = true
text = "======================================="
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfigurationSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleConfiguration" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ConfigurationSection"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 0.623529, 0.156863, 1)
bbcode_enabled = true
text = "Benchmark Configuration"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelInformation" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ConfigurationSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0.345098, 0.431373, 0.458824, 1)
bbcode_enabled = true
text = "Information on the benchmark"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seperator2" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.862745, 0.811765, 0.560784, 1)
bbcode_enabled = true
text = "======================================="
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultsSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleResults" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ResultsSection"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 0.623529, 0.156863, 1)
bbcode_enabled = true
text = "Performance Analysis Results"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelCurrentStatus" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ResultsSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0.345098, 0.431373, 0.458824, 1)
bbcode_enabled = true
text = "Beginning on warm-up iterations..."
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ResultsSection"]
layout_mode = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_right = 64

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/ResultsSection/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_ig7tw")

[node name="LabelResults" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ResultsSection"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/default_color = Color(0.345098, 0.431373, 0.458824, 1)
bbcode_enabled = true
text = "Results will display here after benchmark."
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="CopyrightDisclaimer" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ResultsSection"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/default_color = Color(1, 0.623529, 0.156863, 1)
text = "Lost Rabbit Digital LLC"
horizontal_alignment = 1
vertical_alignment = 1
